# md_puppy

./: .editorconfig  .gitignore  .vimspector.json  Cargo.toml  LICENSE.txt  README.md  automate_tmux.sh  not_found.html  notes.md  rusty-tags.vi  tmux_rust_session.sh
content/: example.md  example_index.md  example_short.md  index.md
content/Datetimetest/: index.md  test.md
content/blog/: index.md
content/examples/: big_image.md  example.md  example_short.md  index.md
css/: main.css
src/: boilerplate.html  cli.rs  command_line.rs  directory_handling.rs  example_short.html  example_short.md  lib.rs  main.rs  markdown_compiling.rs  page_creation.rs  site_data.rs  template_processing.rs
template/: boilerplate.html
