[package]
name = "md_puppy"
version = "0.1.0"
edition = "2018"
authors = ["AnnaLee <softannalee.github.io>"]
description = "A personal static site generator writeen by AnnaLee"
homepage = "https://softannalee.github.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
yaml-rust = "0.4.5"
serde = {version = "1.0.133", features = ["derive"] }
openssl = "0.10.38"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5.13"
tempfile = "3.3.0"

