[package]
name = "md_puppy"
version = "0.1.0"
edition = "2021"
authors = ["AnnaLee <softannalee.github.io>"]
description = "A personal static site generator writeen by AnnaLee"
homepage = "https://softannalee.github.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
yaml-rust = "0.4.5"
serde = {version = "1.0.133", features = ["derive"] }
openssl = "0.10.38"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5.13"
tempfile = "3.3.0"
fs_extra = "1.2.0"
chrono = "0.4.19"
clap = { version = "3.1.2", features = ["derive"] }
clap_complete = "3.1.0"
